fix move container not looking right on mobile

--- a/src/components/BattleChessGame/PokemonManager/PokemonBattleDisplay/PokemonMoveChoices/PokemonMoveChoices.css
+++ b/src/components/BattleChessGame/PokemonManager/PokemonBattleDisplay/PokemonMoveChoices/PokemonMoveChoices.css
@@ -4,6 +4,11 @@
   justify-content: center; 
   flex-wrap: wrap;
   gap: 10px;
+  width: 300px;
+
+  @media (min-width: 600px) {
+    width: auto;
+  }
 }
 
 .subMoveContainer {
